# git-toprepo

./: .gitignore  .insta.yaml  Cargo.toml  README.md  build-and-test.sh  build.sh  flake.nix  git-toprepo  git_toprepo.py  git_toprepo_test.py  git_toprepo_to_port_to_rust.py  pyproject.toml  release.sh  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build-and-test.yaml  ci.yaml  release-pypi.yaml  release.yaml
doc/: terminology.md
lib/testtools/: Cargo.toml  lib.rs  log.rs  test_util.rs
src/: cli.rs  commit_message.rs  config.rs  config_loader.rs  error.rs  expander.rs  fetch.rs  git.rs  git_fast_export_import.rs  git_fast_export_import_dedup.rs  gitmodules.rs  gitreview.rs  import_cache_serde.rs  lib.rs  loader.rs  log.rs  main.rs  push.rs  repo.rs  repo_cache_serde.rs  repo_name.rs  repo_parser.rs  submitted_together.rs  tracing_chrome.rs  ui.rs  util.rs
tests/: .gittoprepo-example  refilter.rs  tests.rs  workspace.rs
tests/fixtures/: keep-this-directory.txt  toprepo.rs
tests/integration/: cli.rs  clone.rs  commit_message.rs  config.rs  dump.rs  fetch.rs  info.rs  init.rs  is_monorepo.rs  log.rs  main.rs  push.rs  recombine.rs  refilter.rs  version.rs  workspace.rs  worktree.rs
tests/integration/fixtures/: make_expander_regression_20251022.sh  make_expander_regression_20251023.sh  make_golden_commit_message.sh  make_merge_with_one_submodule_a.sh  make_merge_with_one_submodule_b.sh  make_merge_with_two_submodules.sh  make_minimal_with_inner_submodule.sh  make_minimal_with_subdirectories_and_symlinks.sh  make_minimal_with_two_submodules.sh  make_minimal_with_worktree.sh  make_moved_submodule.sh  make_readme_example.sh  make_submodule_removal.sh  mod.rs  toprepo.rs
tests/integration/fixtures/git-push-gerrit-refuse-no-change/: git
tests/integration/fixtures/git-upload-pack-slow/: git  git-upload-pack-slow.py
tests/integration/snapshots/: integration__dump__readme-example-import-cache-json.snap
