[package]
name = "git_toprepo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
bincode = { version = "2.0.1", features = ["serde"] }
bstr = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive", "string"] }
colored = "2.1.0"
gix = { version = "0.72.1", features = ["serde"] }
hex = "0.4.3"
indicatif = "0.17.9"
itertools = "0.13.0"
lazy_static = "1.5.0"
lru = "0.13.0"
oneshot = "0.1.11"
regex = "1.10.5"
serde = { version = "1.0.214", features = ["default", "derive", "std"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_with = { version = "3.11.0", features = ["macros"] }
sha2 = "0.10.9"
threadpool = "1.8.1"
toml = "0.8.19"
url = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.17"
gix-testtools = "0.16.1"
predicates = "3.1.3"
tempfile = "3.13.0"

[[bin]]
name = "git-toprepo"
path = "src/main.rs"
