[package]
name = "git-toprepo"
version = "0.0.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace]
members = ["lib/testtools"]

[dependencies]
anyhow = "1.0.86"
bincode = { version = "2.0.1", features = ["serde"] }
bstr = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.8", features = ["derive", "string"] }
colored = "2.1.0"
gix = { version = "0.72.1", features = ["serde"] }
hex = "0.4.3"
indicatif = "0.17.9"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.27"
lru = "0.13.0"
oneshot = "0.1.11"
regex = "1.10.5"
serde = { version = "1.0.214", features = ["default", "derive", "std"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serde_with = { version = "3.11.0", features = ["macros"] }
sha2 = "0.10.9"
threadpool = "1.8.1"
toml = "0.8.19"
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
url = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.17"
git-toprepo-testtools = { path = "lib/testtools" }
gix-testtools = "0.16.1"
predicates = "3.1.3"
rstest = "0.25.0"
tempfile = "3.13.0"

[[bin]]
name = "git-toprepo"
path = "src/main.rs"
