[tool.poetry]
name = "git-toprepo"
version = "0.0.0"
description = "git-submodule made easy with git-toprepo"
keywords = ["git", "submodule", "monorepo", "toprepo", "superrepo"]
authors = ["Fredrik Medley <fredrik@meroton.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.poetry.group.lint.dependencies]
black = "^24.3.0"
ruff = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
git-toprepo = "git_toprepo:main"
